Use google-java-format before Spotless