@@ -3,9 +3,14 @@
 
 package com.microsoft.typespec.http.client.generator.core.postprocessor.implementation;
 
+import com.google.googlejavaformat.FormatterDiagnostic;
+import com.google.googlejavaformat.java.FormatterException;
+import com.google.googlejavaformat.java.RemoveUnusedImports;
 import com.microsoft.typespec.http.client.generator.core.customization.implementation.Utils;
 import com.microsoft.typespec.http.client.generator.core.extension.base.util.FileUtils;
 import com.microsoft.typespec.http.client.generator.core.extension.plugin.NewPlugin;
+import org.slf4j.Logger;
+
 import java.io.File;
 import java.io.IOException;
 import java.io.UncheckedIOException;
@@ -18,19 +23,12 @@ import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-import org.slf4j.Logger;
 
 /**
  * Utility class that handles code formatting.
  */
 public final class CodeFormatterUtil {
-
-    private static final Pattern SPOTLESS_ERROR_PATTERN
-        = Pattern.compile("^(\\d+):\\d+: error: (.*)$", Pattern.MULTILINE);
-    private static final int SPOTLESS_FILE_CONTENT_RANGE = 3;
 
     /**
      * Formats the given files by removing unused imports and applying Eclipse code formatting.
@@ -39,41 +37,8 @@ public final class CodeFormatterUtil {
      * @param plugin The plugin to use to write the formatted files.
      */
     public static void formatCode(Map<String, String> files, NewPlugin plugin, Logger logger) {
-        try {
-            for (Map.Entry<String, String> file : formatCodeInternal(files.entrySet())) {
-                plugin.writeFile(file.getKey(), file.getValue(), null);
-            }
-        } catch (SpotlessException ex) {
-            // format one file at a time, to give better error diagnostics
-            for (Map.Entry<String, String> file : files.entrySet()) {
-                try {
-                    formatCodeInternal(List.of(file));
-                } catch (RuntimeException e) {
-                    // by default, log the whole file
-                    String content = file.getValue();
-
-                    // if we can find the line number from the error message, refine the "content" to the part of file
-                    // around the line
-                    Matcher matcher = SPOTLESS_ERROR_PATTERN.matcher(e.getMessage());
-                    if (matcher.find()) {
-                        int lineNumber = Integer.parseInt(matcher.group(1));
-
-                        StringBuilder stringBuilder = new StringBuilder();
-                        stringBuilder.append(matcher.group(0)).append("\n");
-
-                        // line number from log starts from 1
-                        String[] lines = content.split("\n");
-                        int lineIndexBegin = Math.max(0, lineNumber - 1 - SPOTLESS_FILE_CONTENT_RANGE);
-                        int lineIndexEnd = Math.min(lines.length - 1, lineNumber - 1 + SPOTLESS_FILE_CONTENT_RANGE);
-                        for (int lineIndex = lineIndexBegin; lineIndex <= lineIndexEnd; ++lineIndex) {
-                            stringBuilder.append(lineIndex + 1).append(" ").append(lines[lineIndex]).append("\n");
-                        }
-                        content = stringBuilder.toString();
-                    }
-                    logger.error("Failed to format file '{}'\n{}", file.getKey(), content);
-                }
-            }
-            throw ex;
+        for (Map.Entry<String, String> file : formatCodeInternal(files.entrySet(), logger)) {
+            plugin.writeFile(file.getKey(), file.getValue(), null);
         }
     }
 
@@ -85,10 +50,15 @@ public final class CodeFormatterUtil {
      * @throws RuntimeException If code formatting fails.
      */
     public static List<String> formatCode(Map<String, String> files) {
-        return formatCodeInternal(files.entrySet()).stream().map(Map.Entry::getValue).collect(Collectors.toList());
+        return formatCodeInternal(files.entrySet(), null).stream().map(Map.Entry::getValue).collect(Collectors.toList());
     }
 
-    private static List<Map.Entry<String, String>> formatCodeInternal(Collection<Map.Entry<String, String>> files) {
+    @SuppressWarnings("DataFlowIssue")
+    private static List<Map.Entry<String, String>> formatCodeInternal(Collection<Map.Entry<String, String>> files,
+        Logger logger) {
+        // First step to formatting code is to use the in-memory Google Java Formatter to remove unused imports.
+        files = removeUnusedImports(files, logger);
+
         Path tmpDir = null;
         try {
             tmpDir = FileUtils.createTempDirectory("spotless" + UUID.randomUUID());
@@ -122,6 +92,86 @@ public final class CodeFormatterUtil {
                 Utils.deleteDirectory(tmpDir.toFile());
             }
         }
+    }
+
+    /*
+     * In previous iterations of code formatting, we let Spotless use Google Java Formatter to remove unused imports.
+     * This worked well when code was valid, but when there were errors Spotless would halt processing on the first
+     * issue found. This meant that resolving issues were difficult, as it could take many iterations to resolve the
+     * regressions introduced.
+     *
+     * This then resulted in a new design where when Spotless failed on the entire fileset we would run Spotless
+     * individually on each file, and log the error message with the file content. This worked, but was tremendously
+     * slow as it required running many Maven processes, one for each file.
+     *
+     * This new implementation takes a dependency on google-java-format to run Google Java Formatter ourselves. This
+     * allows us to control error handling by processing all files, in-memory (much faster than letting Spotless run
+     * Google Java Formatter), and capturing all issues before attempting Spotless formatting (which now excludes
+     * unused import removal).
+     */
+    private static List<Map.Entry<String, String>> removeUnusedImports(Collection<Map.Entry<String, String>> files,
+        Logger logger) {
+        List<Map.Entry<String, String>> updatedFiles = new ArrayList<>(files.size());
+
+        // Tracker for errors encountered while running Google Java Formatter.
+        StringBuilder errorCapture = new StringBuilder();
+
+        for (Map.Entry<String, String> file : files) {
+            String content = file.getValue();
+            try {
+                // Use Google Java Formatter to remove unused imports.
+                updatedFiles.add(
+                    new AbstractMap.SimpleEntry<>(file.getKey(), RemoveUnusedImports.removeUnusedImports(content)));
+            } catch (FormatterException ex) {
+                String[] fileLines = content.split("\n");
+                // Capture the error message and continue processing other files.
+                for (FormatterDiagnostic diagnostic : ex.diagnostics()) {
+                    appendDiagnosticError(errorCapture, diagnostic, file.getKey(), fileLines, logger);
+                }
+            }
+            file.setValue(content);
+        }
+
+        if (errorCapture.length() > 0) {
+            throw new IllegalStateException("Google Java Formatter encountered errors:\n" + errorCapture);
+        }
+
+        return updatedFiles;
+    }
+
+
+        // Module modifications needed by Google Java Formatter to run on Java 16+. Need to update 'java' commands used
+        // by TypeSpec to include these options.
+//            --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+//            --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+//            --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+//            --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+//            --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+//            --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+
+    private static void appendDiagnosticError(StringBuilder errorCapture, FormatterDiagnostic diagnostic,
+        String fileName, String[] fileLines, Logger logger) {
+        int lineNumber = diagnostic.line();
+        int columnNumber = diagnostic.column();
+        int startLine = Math.max(0, lineNumber - 3);
+        int endLine = Math.min(fileLines.length - 1, lineNumber + 2);
+
+        StringBuilder diagnosticMessageBuilder = new StringBuilder();
+        diagnosticMessageBuilder.append("Error in file '").append(fileName).append("' at line ")
+            .append(lineNumber).append(", column ").append(columnNumber).append(":\n");
+
+        for (int i = startLine; i <= endLine; i++) {
+            diagnosticMessageBuilder.append(i + 1).append(": ").append(fileLines[i]).append("\n");
+            if (i == lineNumber - 1) {
+                diagnosticMessageBuilder.append(" ".repeat(columnNumber - 1)).append("^\n");
+            }
+        }
+
+        String diagnosticMessage = diagnosticMessageBuilder.toString();
+        if (logger != null) {
+            logger.error(diagnosticMessage);
+        }
+        errorCapture.append(diagnosticMessage);
     }
 
     private static void attemptMavenSpotless(Path pomPath) {
